build_final_one_last.log
    Checking jpegexp-rs v0.1.0 (C:\Users\aroja\CODE\jpegls-rs)
warning: unused import: `std::convert::TryInto`
 --> src\scan_decoder.rs:1:5
  |
1 | use std::convert::TryInto;
  |     ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0609]: no field `pc_parameters` on type `&ScanEncoder<'a>`
   --> src\scan_encoder.rs:259:26
    |
259 |         let range = self.pc_parameters.maximum_sample_value + 1;
    |                          ^^^^^^^^^^^^^ unknown field
    |
help: a field with a similar name exists
    |
259 |         let range = self._pc_parameters.maximum_sample_value + 1;
    |                          +

For more information about this error, try `rustc --explain E0609`.
warning: `jpegexp-rs` (lib) generated 1 warning
error: could not compile `jpegexp-rs` (lib) due to 1 previous error; 1 warning emitted
